Closed Bug 1889442 Opened 6 months ago Closed 6 months ago

[macOS catalina] Overlaid titlebar appears over fullscreen window

Categories

(Core :: Widget: Cocoa, defect)

defect

Tracking

()

VERIFIED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- unaffected
firefox125 --- unaffected
firefox126 + verified

People

(Reporter: yoasif, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(11 files, 2 obsolete files)

Since 1887063.

STR:

  1. Navigate to https://www.youtube.com/watch?v=mMtWXtEG-_E
  2. Play video
  3. Press "f" or fullscreen video

What happens:

Overlay appears over the top of video (see screenshot)

Expected result:

Just video, no overlay.

27:09.00 INFO: Narrowed inbound regression window from [2fe1ab05, 6dd030b8] (3 builds) to [3e1a0031, 6dd030b8] (2 builds) (~1 steps left)
27:09.00 INFO: No more inbound revisions, bisection finished.
27:09.00 INFO: Last good revision: 3e1a0031f44e72f557f0ec79cf8423168b952d80
27:09.00 INFO: First bad revision: 6dd030b8189cbc5e293ad969d0b6887b5dca8793
27:09.00 INFO: Pushlog:https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=3e1a0031f44e72f557f0ec79cf8423168b952d80&tochange=6dd030b8189cbc5e293ad969d0b6887b5dca8793

Attached file about:support
Has STR: --- → yes
Regressed by: 1887063

Set release status flags based on info from the regressing bug 1887063

:emilio, since you are the author of the regressor, bug 1887063, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

I can reproduce this issue with latest Nightly on macOS 10.15.7 too, but not on macOS 14.4.1.

The bug is marked as tracked for firefox126 (nightly). We have limited time to fix this, the soft freeze is in 7 days. However, the bug still isn't assigned.

:gcp, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(gpascutto)
Assignee: nobody → emilio
Flags: needinfo?(gpascutto)

I can't repro in Sonoma either... Two questions, since I can't repro locally:

  • Does this happen if you don't have the default theme? i.e., if you use the light / dark themes for example. Hopefully the answer is no. Also worth restarting after changing theme for good measure.
  • Does it go away in some way (e.g., if you hover over there or something)?
Flags: needinfo?(emilio) → needinfo?(yoasif)
Attached image dark theme hover

I have been using a non-default theme in my day to day profile, and I first noticed it there before trying in a clean profile. So unfortunately, using a non-default theme doesn't make a difference - I tried Alpenglow and the Dark themes (dark theme screenshot attached).

Hovering over it reveals that it is a titlebar.

Flags: needinfo?(yoasif)

Ok so it happens regardless of the theme? That's... Unfortunate. Does it also happen if you turn off browser.theme.macos.native-theme and restart?

Flags: needinfo?(yoasif)
Attached image Screenshot.png

FYI: This is not only youtube video play back in fullscreen mode related. This also happens when you switch any window into fullscreen mode. As mentioned this seems only a regression with older macOS Systems. In my case with macOS 10.15.7.

Maybe interesting: Pressing CMD-L reveals the Addressbar Dropdown behind this overlay. A screenshot is attached.

Same situation with browser.theme.macos.native-theme turned off.

Thanks.

(In reply to Emilio Cobos Álvarez (:emilio) from comment #7)

Ok so it happens regardless of the theme? That's... Unfortunate. Does it also happen if you turn off browser.theme.macos.native-theme and restart?

Setting browser.theme.macos.native-theme to false doesn't make any difference in the behavior observed.

Flags: needinfo?(yoasif)

Wat

See Also: → 1700211

Could you try one of the builds that will show up here and see if it fixes the issue? https://treeherder.mozilla.org/jobs?repo=try&revision=5b9233325ee00e11b4301a12b8f1b5a7a67f86bf

Flags: needinfo?(yoasif)

Okay that had a busted decision task, this one should be better: https://treeherder.mozilla.org/jobs?repo=try&revision=cc86888e974ac7899a9ae601c4e38e27ed083aaf

Attachment #9395297 - Attachment description: WIP: Bug 1889442 - Tentative fix. → Bug 1889442 - Tentative fix. r=mstange!

(In reply to Emilio Cobos Álvarez (:emilio) from comment #13)

Okay that had a busted decision task, this one should be better: https://treeherder.mozilla.org/jobs?repo=try&revision=cc86888e974ac7899a9ae601c4e38e27ed083aaf

Same behavior in this build, including with browser.theme.macos.native-theme set to false.

Flags: needinfo?(yoasif)

Gah, back to the drawing board, but was worth a shot!

Okay, sorry for making you try all this, but without reproing it's hard. Can you try the builds from:

Thanks again.

Flags: needinfo?(yoasif)
Summary: Overlay appears over YouTube video in fullscreen → [macOS catalina] Overlay appears over YouTube video in fullscreen
Attachment #9395297 - Attachment is obsolete: true

Also: Does this happen somehow only on youtube or also if you click the "fullscreen" titlebar button (the green one).

(In reply to Emilio Cobos Álvarez (:emilio) from comment #15)

Gah, back to the drawing board, but was worth a shot!

Okay, sorry for making you try all this, but without reproing it's hard. Can you try the builds from:

This works without any issue with all of the config flags asked about.

This one looks fine until I hover near the top of the screen. Then the large overlay appears - screenshot attached as hover disable fullscreen titlebar tracking.

  • Also, maybe on nightly try to flip full-screen-api.macos-native-full-screen to false and see if it happens?

In all builds, the issue doesn't appear, but the titlebar is not accessible when hovering near the top of the screen (this is likely the design behavior, though).

Thanks again.

(In reply to Emilio Cobos Álvarez (:emilio) from comment #16)

And another one if the second build above is good: https://treeherder.mozilla.org/jobs?repo=try&revision=42f393225e03d81aee70f3e2955bb98cb819bc09

Same issues as revision e51de10dc84045840f900466b0eb5cbdc00fdc92.

(In reply to Emilio Cobos Álvarez (:emilio) from comment #17)

Also: Does this happen somehow only on youtube or also if you click the "fullscreen" titlebar button (the green one).

Oops, I don't really use this feature, but the issue appears when using the "fullscreen" titlebar button. This works correctly with revision 9d4c1449af297b4d7040309a0b7ce175a57161ad.

Flags: needinfo?(yoasif)

Thanks! Well, that is some progress at least and gives me an idea of what to try next.

Does the page info window look fine on nightly for you? (CMD+I in any website)

Depends on: 1890101
Attached image page info.png

Page Info looks fine and virtually identical to builds prior to this regression.

Thank you for your prompt attention to this issue, Emilio.

Summary: [macOS catalina] Overlay appears over YouTube video in fullscreen → [macOS catalina] Overlaid titlebar appears over fullscreen window

Good, thanks... Can you try this build?

Flags: needinfo?(yoasif)
Attached image comment 22 (obsolete) —

The latest build shows a smaller titlebar that is present with any fullscreen window or video. See screenshot.

Flags: needinfo?(yoasif)
Attached image comment 22

Seems like I took a bad screenshot in the last comment. Here's another one.

Attachment #9395625 - Attachment is obsolete: true

Wat... Ok, so what's the behavior of the titlebar as you hover over that or what not? I'm fairly confused at this point about what might macOS be doing :/

Flags: needinfo?(yoasif)

Attached a screen recording - the titlebar acts like you would expect, it's just always present in fullscreen mode.

Flags: needinfo?(yoasif)

Ok let me try a couple things then...

Flags: needinfo?(emilio)
Flags: needinfo?(emilio) → needinfo?(yoasif)

I can reproduce on Catalina, too, FWIW. So far, none of the Try builds have made a difference for me. (My steps-to-reproduce have been to just click the green fullscreen button -- the 3rd one in the row of buttons at the top left of the window.)

Hopefully emilio will be able to remote into my machine when it's daylight hours in his timezone and he can take a look in more detail. :)

To be clear, at least the first build in comment 15 should help, right? That's just a partial back out of the relevant code.

I couldn't connect to your machine, but we can debug that in matrix / slack / email :)

Flags: needinfo?(dholbert)

Another try build:

That has some extra logging that would be useful, if it doesn't work.

I'm moderately confident that should be the right fix, because I've checked everything else from comment 5 and I don't see how it could apply to the browser window before my patch. So I'll optimistically submit it for review...

This forces a titlebar relayout when entering full-screen mode, which
seems to be needed on macOS catalina.

I initially wrote this check to deal with the close button position in
the page info / places windows, but I instead wrote the more correct
check !win.wantsTitleDrawn in:

https://searchfox.org/mozilla-central/rev/c09764753ea40725eb50decad2c51edecbd33308/widget/cocoa/nsCocoaWindow.mm#3020

So this should not have any negative effect on modern macOS versions,
and I think it's the only thing that could affect this in macOS
Catalina, since the browser window didn't use to have a titlebar view
before my change...

Ok I could connect to Daniel's machine, and I could confirm that a build from comment 31 fixes the issue there. So comment 33 should be fine.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fd460127e60f Always update titlebar button positions. r=mac-reviewers,mstange

The build from comment 31 fixes the issue for me.

Flags: needinfo?(yoasif)
Status: NEW → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Attached video actual_not_smooth.mov

Hi Emilio,

Thanks for fixing. Your patch fixed the overlay issue in latest Nightly, but now the toolbar is flickery when it moves in/out. A demo is attached. Can you please check this? Many thanks :)

Flags: needinfo?(emilio)
Attached video Expected_Smooth.mov

Please find also attached a demo of the expected smooth animation.

Could you file a separate bug for that? I haven't been able to reproduce that on Sonoma at all. I guess that's also on Catalina?

If you could run mozregression to see if it happens to be from this bug or bug 1890651 it'd be appreciated. Happy to take a look tho, thanks!

Flags: needinfo?(emilio)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #40)

Could you file a separate bug for that? I haven't been able to reproduce that on Sonoma at all. I guess that's also on Catalina?

If you could run mozregression to see if it happens to be from this bug or bug 1890651 it'd be appreciated. Happy to take a look tho, thanks!

Yes, this is on Catalina. I can't reproduce in Sonoma. Sure I will file a new report. Thanks.

Flags: needinfo?(dholbert)

Closing the loop: Mehmet's new bug report (for comment 38 - comment 41) is bug 1891040, and the bisection over there seems to indicate that it's in fact unrelated to this bug.

Flags: qe-verify+

I was able to reproduce the issue on Firefox 126.0a1 (2024-04-03) on macOS 10.15.7 by following the infos provided in Comment 0.

The issue is fixed on Firefox 126.0 on the same system.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: